Fixed aside and header
- Removed aside animation and transition on mobile
- Avoid having a sticky header when the device height is too small (<480px)

--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -58,6 +58,8 @@ $device-container: (
     animation: none;
     min-height: 0;
     box-shadow: none;
+    animation: none;
+    transition-property: none;
 
     &:hover {
       height: auto;
@@ -70,5 +72,11 @@ $device-container: (
     padding: 0 0.5em;
     transform: translateY(0);
     font-size: 0.875em;
+  }
+}
+
+@media screen and (max-height: 479px) {
+  body > header {
+    position: static;
   }
 }
